zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__apply_nested_layout.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=120, rows=40
DISPLAY: cols=120, rows=40
FOCUS: None

TILED PANES (3)
  Terminal(1):
    geom: x=0, y=0, cols=72, rows=40
    logical_position: 0
    run: None
    selectable: true
    title: Pane #1
    borderless: false

  Terminal(2):
    geom: x=72, y=0, cols=48, rows=20
    logical_position: 1
    run: None
    selectable: true
    title: Pane #2
    borderless: false

  Terminal(3):
    geom: x=72, y=20, cols=48, rows=20
    logical_position: 2
    run: None
    selectable: true
    title: Pane #3
    borderless: false
