zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__apply_simple_two_pane_layout.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: snapshot
---
VIEWPORT: x=0, y=0, cols=100, rows=50
DISPLAY: cols=100, rows=50
FOCUS: None

TILED PANES (2)
  Terminal(1):
    geom: x=0, y=0, cols=100, rows=25
    logical_position: 0
    run: None
    selectable: true
    title: Pane #1
    borderless: false

  Terminal(2):
    geom: x=0, y=25, cols=100, rows=25
    logical_position: 1
    run: None
    selectable: true
    title: Pane #2
    borderless: false
