zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__override_floating_new_panes_created.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=120, rows=40
DISPLAY: cols=120, rows=40
FOCUS: None

TILED PANES (1)
  Terminal(1):
    geom: x=0, y=0, cols=120, rows=40
    logical_position: 0
    run: None
    selectable: true
    title: Pane #1
    borderless: false

FLOATING PANES (3)
  Terminal(2):
    geom: x=10, y=10, cols=40, rows=20
    logical_position: 0
    run: Command(htop)
    pinned: false
    selectable: true
    title: htop
    borderless: false

  Terminal(3):
    geom: x=20, y=15, cols=50, rows=25
    logical_position: 1
    run: Command(vim)
    pinned: false
    selectable: true
    title: vim
    borderless: false

  Terminal(4):
    geom: x=30, y=18, cols=45, rows=22
    logical_position: 2
    run: None
    pinned: false
    selectable: true
    title: Pane #4
    borderless: false
