zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__override_floating_position_and_size_update.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=120, rows=50
DISPLAY: cols=120, rows=50
FOCUS: None

TILED PANES (1)
  Terminal(1):
    geom: x=0, y=0, cols=120, rows=50
    logical_position: 0
    run: None
    selectable: true
    title: Pane #1
    borderless: false

FLOATING PANES (1)
  Terminal(2):
    geom: x=50, y=20, cols=60, rows=30
    logical_position: 0
    run: Command(htop)
    pinned: false
    selectable: true
    title: htop
    borderless: false
